
	Added :noh[lsearch] command to menu mode.

	Added quick shortcuts to dialogs.  Patch by oo-.

	Added 'wildstyle' option to control the way wild menu is displayed.
	Enables displaying it as a menu with one item per line.  Thanks to
	santhoshr and octos.

	Changed order of initialization to perform autocommands before startup
	commands on launch.

	Do not reset completion on terminal resize.

	Fixed kind of a duplicate of first history element on =.

	Fixed displaying size for symbolic links to directories on changing views
	and determining whether they point to a directory in custom views.

	Fixed backward search in menus, which was performed in the opposite
	direction.

	Fixed hanging on sudden terminal loss.  Thanks to aleksejrs.

	Fixed crash on using extremely long function name.

	Fixed overwriting files after editing destination file name.  Thanks to
	rbong.

	Fixed querying file information on 64-bit Windows.  Thanks to santhoshr.

0.8.1 to 0.8.1a

	Added c key to menus that inserts parts of menu line into command-line.
	Thanks to filterfalse.

	Added { and } keys to normal and visual modes.  They act similar to ( and
	), but always consider whether entry is a file or directory.  Thanks to
	octos.

	Apply local filter on picking element of `:history filter` menu.

	Added --disable-build-timestamp option to configure script to perform
	reproducible build.  Thanks to Hendrik Jaeger (a.k.a. henk).

	Display more meaningful message on failure to extract option name (unknown
	option: string).

	Handle register specified for gs normal mode command.  Select files listed
	in that register.  Thanks to filterfalse.

	More accurate parsing of bar not surrounded with whitespace.

	Be consistent with regard to when local state is changed and do not reset
	neither local options nor local filter on entering/leaving custom view.
	Thanks to filterfalse.

	Disallow adding duplicated filetype/fileviewer entries (just ignore them