@@ -1,4 +1,4 @@
-.TH VIFM 1 "February 28, 2016" "vifm 0.8.1a"
+.TH VIFM 1 "March 09, 2016" "vifm 0.8.1a"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -1594,7 +1594,8 @@ See help on :let command for a definition of <expr>.
 .BI "                                         :edit"
 .TP
 .BI ":[range]e[dit] [file...]"
-open selected or passed file(s) in editor.  Accepts macros.
+open selected or passed file(s) in editor.  Macros and environment variables are
+expanded
 .TP
 .BI "                                         :else"
 .TP
