@@ -174,7 +174,7 @@ complete_args(int id, const cmd_info_t *cmd_info, int arg_pos, void *extra_arg)
 			start += complete_highlight_arg(arg);
 	}
 	else if((id == COM_CD || id == COM_PUSHD || id == COM_EXECUTE ||
-			id == COM_SOURCE) && dollar != NULL && dollar > slash)
+			id == COM_SOURCE || id == COM_EDIT) && dollar != NULL && dollar > slash)
 	{
 		start = dollar + 1;
 		complete_envvar(start);
