@@ -15,6 +15,8 @@
 
 	Do not reset completion on terminal resize.
 
+	Expand environment variables for :edit.  Thanks to filterfalse.
+
 	Fixed kind of a duplicate of first history element on =.
 
 	Fixed displaying size for symbolic links to directories on changing views
